--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "nodemon server.js"
 	},
 	"author": "",
 	"license": "ISC",
@@ -19,6 +19,7 @@
 		"express": "^4.16.4",
 		"knex": "^0.16.3",
 		"node-fetch": "^2.4.1",
-		"pg": "^7.9.0"
+		"pg": "^7.9.0",
+		"socket.io": "^2.2.0"
 	}
 }
